[project]
name = "tuya-ble-mesh"
version = "0.40.3"
requires-python = ">=3.11"
dependencies = [
    "bleak>=0.21",
    "bleak-retry-connector>=3.0",
    "cryptography>=42.0",
    "aiohttp>=3.9",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.0",
    "pytest-benchmark>=4.0",
    "homeassistant>=2024.1.0",
    "pyserial>=3.5",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]

[tool.ruff.lint.per-file-ignores]
# ADR-012: sys.path.insert in __init__.py is required to make lib/ importable in HA.
# All imports following the sys.path manipulation are intentionally after non-import code.
"custom_components/tuya_ble_mesh/__init__.py" = ["E402"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = false

[[tool.mypy.overrides]]
# Third-party BLE/serial libs and the internal lib package (custom_components/.../lib/ excluded from analysis)
# homeassistant.* uses Python 3.12+ syntax; skip to avoid parse errors
module = [
    "serial.*",
    "bleak.*",
    "bleak_retry_connector.*",
    "tuya_ble_mesh.*",
    "homeassistant.*",
    "bluetooth_mesh.*",
]
ignore_missing_imports = true
follow_imports = "skip"

[[tool.mypy.overrides]]
module = [
    "aiohttp",
    "aiohttp.*",
    "yaml",
    "voluptuous",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["custom_components.tuya_ble_mesh.config_flow"]
disable_error_code = ["return-value"]

[[tool.mypy.overrides]]
# HA entity base-classes are Any when follow_imports=skip; subclassing Any is unavoidable
module = [
    "custom_components.tuya_ble_mesh.light",
    "custom_components.tuya_ble_mesh.switch",
    "custom_components.tuya_ble_mesh.sensor",
    "custom_components.tuya_ble_mesh.repairs",
]
disable_error_code = ["misc"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["custom_components/tuya_ble_mesh/lib", "tests/stubs"]
asyncio_mode = "auto"
markers = [
    "integration: requires real hardware (Shelly, BLE, sniffer)",
    "requires_ha: requires Home Assistant dependencies",
]

[tool.bandit]
exclude_dirs = ["tests"]

[tool.detect-secrets]
exclude_files = '(\.git/.*|strings\.json|translations/.*\.json)'
